# gisrep

./: .buildinfo  .bumpversion.cfg  .isort.cfg  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  api_manager.py  cli.py  config.py  genindex.html  getting-started.html  index.html  installation.html  issues_reporter.py  locate.py  objects.inv  output_manager.py  search.html  searchindex.js  setup.cfg  setup.py  template_manager.py  templates.html  tox.ini  usage.html
.doctrees/: environment.pickle  getting-started.doctree  index.doctree  installation.doctree  templates.doctree  usage.doctree
_sources/: getting-started.rst.txt  installation.rst.txt  templates.rst.txt  usage.rst.txt
ci_helpers/: check_if_dirty.py
docs/: Makefile  conf.py  getting-started.rst  make.bat  usage.rst
doctrees/: environment.pickle  getting-started.doctree  index.doctree  installation.doctree  templates.doctree  usage.doctree
gisrep/: __init__.py  cli.py  config.py  errors.py  gisrep.py  locate.py  reporter.py  template_manager.py  version.py
gisrep/clients/: github.py
gisrep/github/: github.py
gisrep/outputs/: __init__.py  clipboard.py  file.py  output_manager.py  stdout.py
gisrep/reporters/: __init__.py  github.py  gitlab.py  reporter.py
gisrep/templates/: README.md  README.rst  list_by_labels.html.py  list_by_labels.html.tplt  list_by_labels.tplt  release_note.md.py  release_note.md.tplt  simple_report.md.tplt  template_manager.py
html/: .buildinfo  genindex.html  getting-started.html  index.html  installation.html  objects.inv  search.html  searchindex.js  templates.html  usage.html
html/_sources/: index.rst.txt
html/_static/: documentation_options.js
issues_reporter/: locate.py
issues_reporter/outputs/: file.py  output_manager.py
issues_reporter/templates/: list_by_labels.py  template_manager.py
outputs/: __init__.py  abstract_output.py  clipboard.py  file.py  output_manager.py  stdout.py
templates/: list_by_labels.py  simple_report.tplt  simple_report.txt  template_manager.py
tests/: api_manager_test.py  cli_test.py  config_test.py  conftest.py  test_cli.py  test_config.py  test_gisrep.py  test_output_manager.py  test_template_manager.py
tests/test_data/: .ir_config  test_template.py  test_template.tplt
