[metadata]
name = gisrep
version = attr: gisrep.version.VERSION
author = Sam Briggs
author-email = briggySmalls90@gmail.com
summary = The command line Github issues reporter
long_description = file: README.rst
home-page = https://github.com/briggySmalls/gisrep
project_urls =
    Bug Tracker = https://github.com/briggySmalls/gisrep/issues
    Documentation = https://briggysmalls.github.io/gisrep/index.html
    Source Code = https://github.com/briggySmalls/gisrep
license = GPLv3
classifier =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Bug Tracking
    Topic :: Software Development :: Documentation
keywords =
    Github issues tracker reports reporting documentation release note publish

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires=
    pytest-runner
    sphinx
    sphinx-argparse
tests_require=
    pytest
install_requires =
    toml
    jinja2
    PyGithub
    keyring>=10.6
    pyperclip

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    gisrep = gisrep.gisrep:main

[options.package_data]
gisrep/templates/*.tplt = ./gisrep/templates/*.tplt

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[aliases]
test=pytest

[tool:pytest]
addopts = -v

[isort]
line_length=79
multi_line_output=4
known_third_party=pytest
known_first_party=gisrep
force_sort_within_sections=True
